--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
 	  </ul>
     </nav>
      <h1> Brittany Burnette</h1>
-<img src="img/portrait.png" alt="Brittany">
+<img src="portrait.png" alt="Brittany">
      <h6>studio1production</h6> 
   </div>
    
